--- a/.env.example
+++ b/.env.example
@@ -64,6 +64,9 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-STRIPE_KEY=pk_test_your_public_key
-STRIPE_SECRET=sk_test_your_secret_key
+
+STRIPE_KEY=
+STRIPE_SECRET=
+STRIPE_PRODUCT_ID=
+STRIPE_PRICE_ID=
 
